tests/invalid/assign_list_unpack/main.py
def main() -> None:
    [a, b] = [1, 2]
